# curies.rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  book.toml  cliff.toml  deny.toml
.cargo/: config.toml
.github/workflows/: build.yml  manylinux_build.sh  musllinux_build.sh  test.yml
js/: Cargo.toml  README.md  build_package.js  index.html  package.json
js/src/: api.rs  curies.rs  lib.rs
js/tests/: curies.test.ts
lib/: Cargo.toml
lib/docs/: SUMMARY.md  contributing.md  introduction.md  mkdocs.yml  use_javascript.md  use_python.md  use_rust.md
lib/docs/docs/: architecture.md  contributing.md  devtools.md  getting-started.md  index.md  javascript-example-framework.md  javascript-example-html.md  javascript.md  python-devtools.md  python.md  r.md  reconciliation.md  rust.md  struct.md
lib/docs/includes/: abbreviations.md
lib/src/: api.rs  error.rs  fetch.rs  lib.rs  sources.rs
lib/tests/: curies_test.rs
lib/tests/resources/: context.jsonld  extended_map.json
python/: Cargo.toml  README.md  pyproject.toml  requirements.txt  try.py
python/src/: api.rs  lib.rs
python/tests/: test_api.py  test_docs.py
r/: DESCRIPTION  NAMESPACE  README.md
r/R/: extendr-wrappers.R
r/man/: curies-package.Rd  curiesr-package.Rd
r/src/: Makevars  Makevars.win  curiesr-win.def  entrypoint.c
r/src/rust/: Cargo.toml
r/src/rust/src/: lib.rs
r/tests/: test-curies.R  testthat.R
r/tests/testthat/: test-curies.R
scripts/: benchmark.sh  benchmark_python.py  benchmark_rust.py  build-js.sh  build-python.sh  bump.sh  cov.sh  docs-build.sh  docs-install.sh  docs-serve.sh  docs.sh  install-dev.sh  release.sh  test-all.sh  test-js.sh  test-python.sh  test-r.sh
src/: error.rs  lib.rs
