[workspace]
resolver = "2"
members = [
    "lib",
    "js",
    "python",
    "r/src/rust",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
description = "Idiomatic conversion between URIs and compact URIs (CURIEs)"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["semantic-web", "linked-data", "linked-open-data"]
categories = ["science", "encoding"]
repository = "https://github.com/biopragmatics/curies.rs"
homepage = "https://biopragmatics.github/curies.rs"
authors = [
  "Charles Tapley Hoyt <cthoyt@gmail.com>",
  "Vincent Emonet <vincent.emonet@gmail.com>"
]

[profile.release]
lto = true
