[package]
name = "curies"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trie-rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-trait = "0.1"


[dev-dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
