[package]
name = "curies"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptrie = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false }
sophia = { version = "0.8.0" }

[dev-dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true


# Do not use rustls-tls on Windows aarch64 due to Ring dependency https://github.com/briansmith/ring/issues/1167
[target.'cfg(all(windows, target_arch = "aarch64"))'.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "json", "native-tls"]

[target.'cfg(not(all(windows, target_arch = "aarch64")))'.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "json", "rustls-tls"]
