[package]
name = "curies-py"
description = "Python bindings for the curies library"
repository = "https://github.com/biopragmatics/curies.rs/tree/main/python"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true

[lib]
name = "curies_rs"
crate-type = ["cdylib"]

[dependencies]
curies.workspace = true
serde.workspace = true
pyo3 = { version = "0.21", features = ["extension-module"] }
# pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
pythonize = "0.21"
tokio = { version = "1.34", features = ["rt-multi-thread"] }
