[package]
name = 'curiesr'
publish = false
version = '0.3.0'
edition = '2021'
license-file.workspace = true

[lib]
crate-type = [ 'staticlib' ]
name = 'curiesr'

[dependencies]
# extendr-api = '*'
extendr-api = '0.6.0'
curies = { version = "0.1.1", path = "../../../lib" }
tokio = { version = "1.34", features = ["rt-multi-thread"] }
